@@ -2,8 +2,9 @@ package com.example.ddakdaegi.domain.promotion.service;
 
 import static com.example.ddakdaegi.global.common.exception.enums.ErrorCode.*;
 
-import com.example.ddakdaegi.domain.image.entity.Image;
+import com.example.ddakdaegi.domain.image.repository.ImageRepository;
 import com.example.ddakdaegi.domain.product.entity.Product;
+import com.example.ddakdaegi.domain.product.repository.ProductRepository;
 import com.example.ddakdaegi.domain.promotion.dto.request.CreatePromotionProductRequest;
 import com.example.ddakdaegi.domain.promotion.dto.request.CreatePromotionRequest;
 import com.example.ddakdaegi.domain.promotion.dto.request.UpdatePromotionRequest;
@@ -14,11 +15,14 @@ import com.example.ddakdaegi.domain.promotion.enums.DiscountPolicy;
 import com.example.ddakdaegi.domain.promotion.repository.PromotionProductRepository;
 import com.example.ddakdaegi.domain.promotion.repository.PromotionRepository;
 import com.example.ddakdaegi.global.common.exception.BaseException;
+import com.example.ddakdaegi.global.scheduler.PromotionSchedulerService;
 import java.math.BigDecimal;
 import java.math.RoundingMode;
 import java.util.List;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -27,8 +31,10 @@ import org.springframework.transaction.annotation.Transactional;
 public class PromotionService {
 
 	private final PromotionRepository promotionRepository;
-//	private final ProductRepository productRepository;
+	private final ProductRepository productRepository;
 	private final PromotionProductRepository promotionProductRepository;
+	private final PromotionSchedulerService schedulerService;
+	private final ImageRepository imageRepository;
 
 	@Transactional
 	public PromotionResponse createPromotion(CreatePromotionRequest request) {
@@ -36,14 +42,19 @@ public class PromotionService {
 			throw new BaseException(INVALID_DATE_RANGE);
 		}
 
-		Image newBanner = null;
+		Promotion promotion = promotionRepository.save(new Promotion(
+			request.getName(),
+			imageRepository.findById(request.getImage()).orElseThrow(() -> new BaseException(NOT_FOUND_IMAGE)),
+			request.getStartDate(),
+			request.getEndDate(),
+			false
+		));
 
-		Promotion promotion = Promotion.create(request.getName(), newBanner, request.getStartDate(), request.getEndDate());
 		promotionRepository.save(promotion);
 
 		for (CreatePromotionProductRequest ppRequest : request.getPromotionProducts()) {
-//			Product product = productRepository.findById(ppRequest.getProductId()).orElseThrow(() -> new BaseException(NOT_FOUND_PRODUCT));
-			Product product = null;
+			Product product = productRepository.findById(ppRequest.getProductId())
+				.orElseThrow(() -> new BaseException(NOT_FOUND_PRODUCT));
 
 			if (product.getSoldOut()) {
 				throw new BaseException(SOLD_OUT);
@@ -72,39 +83,28 @@ public class PromotionService {
 			promotionProductRepository.save(promotionProduct);
 		}
 
-		return new PromotionResponse(
-			promotion.getId(),
-			promotion.getName(),
-			promotion.getStartTime(),
-			promotion.getEndTime(),
-			promotion.getIsActive(),
-			promotion.getCreatedAt(),
-			promotion.getUpdatedAt()
-		);
+		schedulerService.schedulePromotion(promotion.getId(), promotion.getStartDate(), true);   // 활성화 예약
+		schedulerService.schedulePromotion(promotion.getId(), promotion.getEndDate(), false);    // 비활성화 예약
+
+		return new PromotionResponse(promotion);
 	}
 
 	@Transactional(readOnly = true)
-	public List<PromotionResponse> getPromotions() {
-		List<Promotion> promotions = promotionRepository.findAll();
+	public Page<PromotionResponse> findAllPromotion(Pageable pageable) {
+		Page<Promotion> postPage = promotionRepository.findAll(pageable);
 
-		return promotions.stream()
-			.map(PromotionResponse::from)
-			.collect(Collectors.toList());
+		List<PromotionResponse> dtoList = postPage.getContent().stream()
+			.map(PromotionResponse::toDto)
+			.toList();
+
+		return new PageImpl<>(dtoList, pageable, postPage.getTotalElements());
 	}
 
 	@Transactional(readOnly = true)
-	public PromotionResponse getPromotionById(Long promotionId) {
+	public PromotionResponse findPromotionById(Long promotionId) {
 		Promotion promotion = promotionRepository.findById(promotionId).orElseThrow(() -> new BaseException(NOT_FOUND_PROMOTION));
 
-		return new PromotionResponse(
-			promotion.getId(),
-			promotion.getName(),
-			promotion.getStartTime(),
-			promotion.getEndTime(),
-			promotion.getIsActive(),
-			promotion.getCreatedAt(),
-			promotion.getUpdatedAt()
-		);
+		return new PromotionResponse(promotion);
 	}
 
 	@Transactional
@@ -114,24 +114,15 @@ public class PromotionService {
 		}
 
 		Promotion promotion = promotionRepository.findById(promotionId).orElseThrow(() -> new BaseException(NOT_FOUND_PROMOTION));
-
-		Image newBanner = null;
 		promotion.update(
 			request.getName(),
-			newBanner,
+			imageRepository.findById(request.getImage()).orElseThrow(() -> new BaseException(NOT_FOUND_PRODUCT)),
 			request.getStartDate(),
-			request.getEndDate()
+			request.getEndDate(),
+			request.getIsTerminate()
 		);
 
-		return new PromotionResponse(
-			promotion.getId(),
-			promotion.getName(),
-			promotion.getStartTime(),
-			promotion.getEndTime(),
-			promotion.getIsActive(),
-			promotion.getCreatedAt(),
-			promotion.getUpdatedAt()
-		);
+		return new PromotionResponse(promotion);
 	}
 
 	@Transactional
@@ -145,7 +136,7 @@ public class PromotionService {
 		BigDecimal result;
 
 		if (policy == DiscountPolicy.RATE) {
-			BigDecimal rate = BigDecimal.valueOf(value).divide(BigDecimal.valueOf(100)); // value = 10 → 0.1
+			BigDecimal rate = BigDecimal.valueOf(value).divide(BigDecimal.valueOf(100), 4, RoundingMode.HALF_UP);
 			result = original.multiply(BigDecimal.ONE.subtract(rate));
 		} else if (policy == DiscountPolicy.FIXED) {
 			result = original.subtract(BigDecimal.valueOf(value));
